Desarrollando la pagina inicial de la web, usando grid pruebas

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/inicio/global.css">
     <title>Página Inicial</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo">NBA</div>
+        <nav>HOLA</nav>
+    </header>
+    <div class="mainImage"></div>
+    <aside>
+        <div class="firstView"></div>
+        <div class="secondView"></div>
+    </aside>
 </body>
 </html>
