--- a/index.html
+++ b/index.html
@@ -4,17 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/inicio/global.css">
-    <title>Página Inicial</title>
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
+    <title>NBA MINDS</title>
 </head>
 <body>
     <header>
-        <div class="logo">NBA</div>
-        <nav>HOLA</nav>
+        <div class="logo">
+            <p>NBA MINDS</p>
+        </div>
+        <nav>
+            <div class="botones">
+                <ul>
+                    <li>
+                        <a href="html/estrellas.html">Estrellas NBA</a>
+                    </li>
+                    <li>
+                        <a href="html/hazañas.html">Hazañas</a>
+                    </li>
+                    <li>
+                        <a href="html/Kobe.html">Kobe & Gigi</a>
+                    </li>
+                    <li>
+                        <a href="html/masInfo.html">+ INFO</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
-    <div class="mainImage"></div>
-    <aside>
+    <article>
+        <div class="mainImage"></div>
+    </article>
+    <section>
         <div class="firstView"></div>
         <div class="secondView"></div>
-    </aside>
+        <div class="description"></div>
+    </section>
+    <main>
+        <div class="teams">
+            <div class="fondoTeams"></div>
+            <div class="titleTeams"></div>
+            <div class="atlantaHawks"></div>
+            <div class="bostonCeltics"></div>
+            <div class="brooklynNets"></div>
+            <div class="charlotteHornets"></div>
+            <div class="chicagoBulls"></div>
+            <div class="clevelandCavaliers"></div>
+            <div class="dallasMavericks"></div>
+            <div class="denverNuggets"></div>
+            <div class="detroitPistons"></div>
+            <div class="goldenStateWarriors"></div>
+            <div class="houstonRockets"></div>
+            <div class="indianaPacers"></div>
+            <div class="losAngelesClippers"></div>
+            <div class="losAngelesLakers"></div>
+            <div class="memphisGrizzlies"></div>
+            <div class="miamiHeat"></div>
+            <div class="milwaukeeBucks"></div>
+            <div class="minnesotaTimberwolves"></div>
+            <div class="newOrleansPelicans"></div>
+            <div class="newYorkKnicks"></div>
+            <div class="oklahomaCityThunder"></div>
+            <div class="orlandoMagic"></div>
+            <div class="philadelphia76ers"></div>
+            <div class="phoenixSuns"></div>
+            <div class="portlandTrailBlazers"></div>
+            <div class="sacramentoKings"></div>
+            <div class="sanAntonioSpurs"></div>
+            <div class="torontoRaptors"></div>
+            <div class="utahJazz"></div>
+            <div class="washingtonWizards"></div>
+        </div>
+    </main>
+    <footer></footer>   
 </body>
 </html>
