--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/inicio/global.css">
+    <link rel="stylesheet" href="css/inicio/headerNav.css">
+    <link rel="stylesheet" href="css/inicio/section.css">
+    <link rel="stylesheet" href="css/inicio/mainTeams.css">
+    <link rel="stylesheet" href="css/inicio/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
     <title>NBA MINDS</title>
 </head>
@@ -35,8 +38,12 @@
         <div class="mainImage"></div>
     </article>
     <section>
-        <div class="firstView"></div>
-        <div class="secondView"></div>
+        <div class="firstView">
+            <div class="photo1"></div>
+        </div>
+        <div class="secondView">
+            <div class="photo2"></div>
+        </div>
         <div class="description"></div>
     </section>
     <main>
@@ -75,6 +82,10 @@
             <div class="washingtonWizards"></div>
         </div>
     </main>
-    <footer></footer>   
+    <footer>
+        <div class="copyright">
+            <p>&copy;2040 <a href="index.html">NBA MINDS</a></p>
+        </div>
+    </footer>   
 </body>
 </html>
