insercion redes sociales

--- a/index.html
+++ b/index.html
@@ -35,22 +35,37 @@
         </nav>
     </header>
     <article>
-        <div class="mainImage"></div>
+        <div class="slider"></div>
     </article>
     <section>
-        <div class="firstView">
-            <div class="photo1"></div>
+        <div class="firstPart">
+            <div class="firstView">
+                <div class="photo1"></div>
+            </div>
+            <div class="secondView">
+                <div class="photo2"></div>
+            </div>
+            <div class="description">
+                <div class="firstText">
+                    <p>Lorem</p>
+                </div>
+                <div class="secondText"></div>
+            </div>
         </div>
-        <div class="secondView">
-            <div class="photo2"></div>
-        </div>
-        <div class="description"></div>
     </section>
     <main>
-        <div class="teams">
-            <div class="fondoTeams"></div>
+        <div class="title">
             <div class="titleTeams"></div>
-            <div class="atlantaHawks"></div>
+        </div>
+        <div class="fondoTeams"></div>
+        
+        <div class="teams">
+            <div class="team1">
+                <div class="atlantaHawks"></div>
+            </div>
+            <div class="team1old">
+                <div class="Tri-CitiesBlackhawks"></div>
+            </div>
             <div class="bostonCeltics"></div>
             <div class="brooklynNets"></div>
             <div class="charlotteHornets"></div>
@@ -83,8 +98,24 @@
         </div>
     </main>
     <footer>
-        <div class="copyright">
-            <p>&copy;2040 <a href="index.html">NBA MINDS</a></p>
+        <div class="finalInfo">
+            <div class="copyright">
+                <p>&copy;2020 <a href="index.html">NBA MINDS</a></p>
+            </div>
+            <div class="socialMedia">
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="img/socialMedia/facebook.png" alt="Facebook">
+                </a>
+                <a href="https://twitter.com/?lang=es" target="_blank">
+                    <img src="img/socialMedia/twitter.png" alt="Twitter">
+                </a>
+                <a href="https://www.instagram.com/?hl=es" target="_blank">
+                    <img src="img/socialMedia/instagram.png" alt="Instagram">
+                </a>
+                <a href="https://es.linkedin.com/" target="_blank">
+                    <img src="img/socialMedia/linkedin.png" alt="LinkedIn">
+                </a>
+            </div>
         </div>
     </footer>   
 </body>
