Agregadas ya todas la imagenes de los equipos y cambio de nombre del index y el mainTeams

--- a/index.html
+++ b/index.html
@@ -54,47 +54,248 @@
         </div>
     </section>
     <main>
-        <div class="title">
-            <div class="titleTeams"></div>
-        </div>
-        <div class="fondoTeams"></div>
-        
+        <div class="titleTeams"></div>
         <div class="teams">
-            <div class="team1">
-                <div class="atlantaHawks"></div>
+            <div class="innerTeam t1">
+                <div class="newTeam t1">
+                    <img src="img/teams/atlantaHawks.png" alt="">
+                </div>
+                <div class="oldTeam t1">
+                    <img src="img/oldTeams/hawksOld.png" alt="">
+                </div>
             </div>
-            <div class="team1old">
-                <div class="Tri-CitiesBlackhawks"></div>
+            <div class="innerTeam t2">
+                <div class="newTeam t2">
+                    <img src="img/teams/bostonCeltics.png" alt="">
+                </div>
+                <div class="oldTeam t2">
+                    <img src="img/oldTeams/bostonOld.png" alt="">
+                </div>
             </div>
-            <div class="bostonCeltics"></div>
-            <div class="brooklynNets"></div>
-            <div class="charlotteHornets"></div>
-            <div class="chicagoBulls"></div>
-            <div class="clevelandCavaliers"></div>
-            <div class="dallasMavericks"></div>
-            <div class="denverNuggets"></div>
-            <div class="detroitPistons"></div>
-            <div class="goldenStateWarriors"></div>
-            <div class="houstonRockets"></div>
-            <div class="indianaPacers"></div>
-            <div class="losAngelesClippers"></div>
-            <div class="losAngelesLakers"></div>
-            <div class="memphisGrizzlies"></div>
-            <div class="miamiHeat"></div>
-            <div class="milwaukeeBucks"></div>
-            <div class="minnesotaTimberwolves"></div>
-            <div class="newOrleansPelicans"></div>
-            <div class="newYorkKnicks"></div>
-            <div class="oklahomaCityThunder"></div>
-            <div class="orlandoMagic"></div>
-            <div class="philadelphia76ers"></div>
-            <div class="phoenixSuns"></div>
-            <div class="portlandTrailBlazers"></div>
-            <div class="sacramentoKings"></div>
-            <div class="sanAntonioSpurs"></div>
-            <div class="torontoRaptors"></div>
-            <div class="utahJazz"></div>
-            <div class="washingtonWizards"></div>
+            <div class="innerTeam t3">
+                <div class="newTeam t3">
+                    <img src="img/teams/brooklynNets.png" alt="">
+                </div>
+                <div class="oldTeam t3">
+                    <img src="img/oldTeams/newJerseyNets.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t4">
+                <div class="newTeam t4">
+                    <img src="img/teams/charlotteHornets.png" alt="">
+                </div>
+                <div class="oldTeam t4">
+                    <img src="img/oldTeams/charlotteBobcats.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t5">
+                <div class="newTeam t5">
+                    <img src="img/teams/chicagoBulls.png" alt="">
+                </div>
+                <div class="oldTeam t5">
+                    <img src="img/oldTeams/sameChicago.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t6">
+                <div class="newTeam t6">
+                    <img src="img/teams/clevelandCavaliers.png" alt="">
+                </div>
+                <div class="oldTeam t6">
+                    <img src="img/oldTeams/clevelandCavOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t7">
+                <div class="newTeam t7">
+                    <img src="img/teams/dallasMavericks.png" alt="">
+                </div>
+                <div class="oldTeam t7">
+                    <img src="img/oldTeams/dallasMavsOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t8">
+                <div class="newTeam t8">
+                    <img src="img/teams/denverNuggets.png" alt="">
+                </div>
+                <div class="oldTeam t8">
+                    <img src="img/oldTeams/denverRockets.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t9">
+                <div class="newTeam t9">
+                    <img src="img/teams/detroitPistons.png" alt="">
+                </div>
+                <div class="oldTeam t9">
+                    <img src="img/oldTeams/fortWaynePistons.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t10">
+                <div class="newTeam t10">
+                    <img src="img/teams/goldenStateWarriors.png" alt="">
+                </div>
+                <div class="oldTeam t10">
+                    <img src="img/oldTeams/philadelphiaWarriors.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t11">
+                <div class="newTeam t11">
+                    <img src="img/teams/houstonRockets.png" alt="">
+                </div>
+                <div class="oldTeam t11">
+                    <img src="img/oldTeams/sanDiegoRockets.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t12">
+                <div class="newTeam t12">
+                    <img src="img/teams/indianaPacers.png" alt="">
+                </div>
+                <div class="oldTeam t12">
+                    <img src="img/oldTeams/indianaOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t13">
+                <div class="newTeam t13">
+                    <img src="img/teams/losAngelesClippers.png" alt="">
+                </div>
+                <div class="oldTeam t13">
+                    <img src="img/oldTeams/buffaloBraves.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t14">
+                <div class="newTeam t14">
+                    <img src="img/teams/losAngelesLakers.png" alt="">
+                </div>
+                <div class="oldTeam t14">
+                    <img src="img/oldTeams/minneapolisLakers.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t15">
+                <div class="newTeam t15">
+                    <img src="img/teams/memphisGrizzlies.png" alt="">
+                </div>
+                <div class="oldTeam t15">
+                    <img src="img/oldTeams/vancouverGrizzlies.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t16">
+                <div class="newTeam t16">
+                    <img src="img/teams/miamiHeat.png" alt="">
+                </div>
+                <div class="oldTeam t16">
+                    <img src="img/oldTeams/miamiOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t17">
+                <div class="newTeam t17">
+                    <img src="img/teams/milwaukeeBucks.png" alt="">
+                </div>
+                <div class="oldTeam t17">
+                    <img src="img/oldTeams/milwaukeeOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t18">
+                <div class="newTeam t18">
+                    <img src="img/teams/minnesotaTimberwolves.png" alt="">
+                </div>
+                <div class="oldTeam t18">
+                    <img src="img/oldTeams/minnesotaTimberwolvesOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t19">
+                <div class="newTeam t19">
+                    <img src="img/teams/newOrleansPelicans.png" alt="">
+                </div>
+                <div class="oldTeam t19">
+                    <img src="img/oldTeams/newOrleansOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t20">
+                <div class="newTeam t20">
+                    <img src="img/teams/newYorkKnicks.png" alt="">
+                </div>
+                <div class="oldTeam t20">
+                    <img src="img/oldTeams/newYorkKnicksOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t21">
+                <div class="newTeam t21">
+                    <img src="img/teams/oklahomaThunder.png" alt="">
+                </div>
+                <div class="oldTeam t21">
+                    <img src="img/oldTeams/seattleSupersonics.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t22">
+                <div class="newTeam t22">
+                    <img src="img/teams/orlandoMagic.png" alt="">
+                </div>
+                <div class="oldTeam t22">
+                    <img src="img/oldTeams/orlandoMagic.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t23">
+                <div class="newTeam t23">
+                    <img src="img/teams/philadelphia76ers.png" alt="">
+                </div>
+                <div class="oldTeam t23">
+                    <img src="img/oldTeams/syracuseNationals.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t24">
+                <div class="newTeam t24">
+                    <img src="img/teams/phoenixSuns3.png" alt="">
+                </div>
+                <div class="oldTeam t24">
+                    <img src="img/oldTeams/phoenixSunsOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t25">
+                <div class="newTeam t25">
+                    <img src="img/teams/portlandTrailBlazers.png" alt="">
+                </div>
+                <div class="oldTeam t25">
+                    <img src="img/oldTeams/portlandTrailBlazersOld.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t26">
+                <div class="newTeam t26">
+                    <img src="img/teams/sacramentoKings.png" alt="">
+                </div>
+                <div class="oldTeam t26">
+                    <img src="img/oldTeams/rochesterRoyals.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t27">
+                <div class="newTeam t27">
+                    <img src="img/teams/sanAntonioSpurs.png" alt="">
+                </div>
+                <div class="oldTeam t27">
+                    <img src="img/oldTeams/sanAntonioSpurs.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t28">
+                <div class="newTeam t28">
+                    <img src="img/teams/torontoRaptors.png" alt="">
+                </div>
+                <div class="oldTeam t28">
+                    <img src="img/oldTeams/torontoRaptors.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t29">
+                <div class="newTeam t29">
+                    <img src="img/teams/utahJazz.png" alt="">
+                </div>
+                <div class="oldTeam t29">
+                    <img src="img/oldTeams/newOrleansJazz.png" alt="">
+                </div>
+            </div>
+            <div class="innerTeam t30">
+                <div class="newTeam t30">
+                    <img src="img/teams/washingtonWizards.png" alt="">
+                </div>
+                <div class="oldTeam t30">
+                    <img src="img/oldTeams/chicagoPackers.png" alt="">
+                </div>
+            </div>
         </div>
     </main>
     <footer>
