Cambios en los iconos de redes sociales

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/inicio/mainTeams.css">
     <link rel="stylesheet" href="css/inicio/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/3a00fbc9e7/UntitledProject/style.css">
     <title>NBA MINDS</title>
 </head>
 <body>
@@ -47,7 +48,8 @@
             </div>
             <div class="description">
                 <div class="firstText">
-                    <p>Lorem</p>
+                    <p>Bienvenidos a NBA MINDS, el lugar donde hablamos sobre temas candentes y de actualidad de la NBA como los records que están batiendo las nuevas estrellas de la liga. Así como antiguas hazañas de viejas glorias que pasaron por la National Basketball Association.
+                    </p>
                 </div>
                 <div class="secondText"></div>
             </div>
@@ -305,16 +307,16 @@
             </div>
             <div class="socialMedia">
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img src="img/socialMedia/facebook.png" alt="Facebook">
+                    <span class="icon-facebook2"></span>
                 </a>
                 <a href="https://twitter.com/?lang=es" target="_blank">
-                    <img src="img/socialMedia/twitter.png" alt="Twitter">
+                    <span class="icon-twitter"></span>
                 </a>
                 <a href="https://www.instagram.com/?hl=es" target="_blank">
-                    <img src="img/socialMedia/instagram.png" alt="Instagram">
+                    <span class="icon-instagram"></span>
                 </a>
                 <a href="https://es.linkedin.com/" target="_blank">
-                    <img src="img/socialMedia/linkedin.png" alt="LinkedIn">
+                    <span class="icon-linkedin2"></span>
                 </a>
             </div>
         </div>
