Limpiando y ramificando código

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale:1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="css/inicio/headerNav.css">
     <link rel="stylesheet" href="css/inicio/section.css">
     <link rel="stylesheet" href="css/inicio/mainTeams.css">
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo">
-            <p>NBA MINDS</p>
+            <p> - NBA MINDS -</p>
         </div>
         <nav>
             <div class="botones">
@@ -48,7 +48,7 @@
             </div>
             <div class="description">
                 <div class="firstText">
-                    <p>Bienvenidos a NBA MINDS, el lugar donde hablamos sobre temas candentes y de actualidad de la NBA como los records que están batiendo las nuevas estrellas de la liga. Así como antiguas hazañas de viejas glorias que pasaron por la National Basketball Association.
+                    <p>Bienvenidos a NBA MINDS, el lugar donde hablamos sobre temas candentes y de actualidad de la NBA como los récords que están batiendo las nuevas estrellas de la liga. Así como antiguas hazañas de viejas glorias que pasaron por la mejor liga de baloncesto del mundo.
                     </p>
                 </div>
                 <div class="secondText"></div>
