--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
             </div>
             <div class="description">
                 <div class="firstText">
-                    <p>Bienvenidos a NBA MINDS, el lugar donde hablamos sobre temas candentes y de actualidad de la NBA como los récords que están batiendo las nuevas estrellas de la liga. Así como antiguas hazañas de viejas glorias que pasaron por la mejor liga de baloncesto del mundo.
+                    <p>Bienvenidos a NBA MINDS, el lugar donde hablamos
+                        sobre temas candentes y de actualidad de la NBA
+                        como los récords que están batiendo las nuevas 
+                        estrellas de la liga. Así como antiguas hazañas 
+                        de viejas glorias que pasaron por la mejor liga 
+                        de baloncesto del mundo.
                     </p>
                 </div>
                 <div class="secondText"></div>
