Cambio de icono de footer por error con icomoon e introducción de logo principal y glitch

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="css/inicio/mainTeams.css">
     <link rel="stylesheet" href="css/inicio/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/3a00fbc9e7/UntitledProject/style.css">
+    <script src="https://kit.fontawesome.com/298a659b97.js" crossorigin="anonymous"></script>
     <title>NBA MINDS</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <p> - NBA MINDS -</p>
+            <a href="index.html">
+                <img src="img/logoWeb/logNBAMinds.png" alt="">
+                <p>NBA MINDS</p>
+            </a>
         </div>
         <nav>
             <div class="botones">
@@ -61,7 +64,21 @@
         </div>
     </section>
     <main>
-        <div class="titleTeams"></div>
+        <div class="titleTeams">
+            <div class="actualTeams">
+                <h1>EQUIPOS ACTUALES</h1>
+                <h1>EQUIPOS ACTUALES</h1>
+                <h1>EQUIPOS ACTUALES</h1>
+            </div>
+            <div class="midLane">
+                <h1>VS</h1>
+            </div>
+            <div class="OldTeams">
+                <h1>ANTIGUOS EQUIPOS</h1>
+                <h1>ANTIGUOS EQUIPOS</h1>
+                <h1>ANTIGUOS EQUIPOS</h1>
+            </div>
+        </div>
         <div class="teams">
             <div class="innerTeam t1">
                 <div class="newTeam t1">
@@ -312,16 +329,16 @@
             </div>
             <div class="socialMedia">
                 <a href="https://www.facebook.com/" target="_blank">
-                    <span class="icon-facebook2"></span>
+                    <i class="fab fa-facebook-square fa-2x"></i>
                 </a>
                 <a href="https://twitter.com/?lang=es" target="_blank">
-                    <span class="icon-twitter"></span>
+                    <i class="fab fa-twitter fa-2x"></i>
                 </a>
                 <a href="https://www.instagram.com/?hl=es" target="_blank">
-                    <span class="icon-instagram"></span>
+                    <i class="fab fa-instagram fa-2x"></i>
                 </a>
                 <a href="https://es.linkedin.com/" target="_blank">
-                    <span class="icon-linkedin2"></span>
+                    <i class="fab fa-linkedin-in fa-2x"></i>
                 </a>
             </div>
         </div>
