--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale:1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/masInfo/headerNav.css">
+    <link rel="stylesheet" href="../css/masInfo/main.css">
+    <link rel="stylesheet" href="../css/masInfo/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/298a659b97.js" crossorigin="anonymous"></script>
     <title>NBA MINDS</title>
@@ -36,4 +38,31 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <div class="titulo"></div>
+            <div class="formulario"></div>
+        </div>
+    </main>
+    <footer>
+        <div class="finalInfo">
+            <div class="copyright">
+                <p>&copy;2020 <a href="index.html">NBA MINDS</a></p>
+            </div>
+            <div class="socialMedia">
+                <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                </a>
+                <a href="https://twitter.com/?lang=es" target="_blank">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </a>
+                <a href="https://www.instagram.com/?hl=es" target="_blank">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a href="https://es.linkedin.com/" target="_blank">
+                    <i class="fab fa-linkedin-in fa-2x"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
