Titulo del formulario

--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -40,7 +40,11 @@
     </header>
     <main>
         <div class="container">
-            <div class="titulo"></div>
+            <div class="titulo">
+                <i class="fas fa-basketball-ball"></i>
+                <h1>HAZNOS UN PICK & ROLL</h1>
+                <i class="fas fa-basketball-ball"></i>
+            </div>
             <div class="formulario"></div>
         </div>
     </main>
