Introduciendo un animación con filtro

--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -39,13 +39,15 @@
         </nav>
     </header>
     <main>
-        <div class="container">
+        <div class="contenedor">
             <div class="titulo">
                 <i class="fas fa-basketball-ball"></i>
                 <h1>HAZNOS UN PICK & ROLL</h1>
                 <i class="fas fa-basketball-ball"></i>
             </div>
-            <div class="formulario"></div>
+            <div class="formulario">
+                <form action="pick&roll.php" method="POST"></form>
+            </div>
         </div>
     </main>
     <footer>
