Cambios mínimos formulario

--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -40,6 +40,7 @@
     </header>
     <main>
         <div class="contenedor">
+            <div class="fondoForm"></div>
             <div class="titulo">
                 <i class="fas fa-basketball-ball"></i>
                 <h1>HAZNOS UN PICK & ROLL</h1>
