Nuevos cambios en formulario

--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -62,7 +62,7 @@
                         <input type="text" id="email" name="email" placeholder="Introduzca un e-mail">
                     </div>
                     <div class="dato4">
-                        <label class="paisResi" for="pais">País de residencia baloncentística:</label>
+                        <label class="paisResi" for="pais">País de residencia:</label>
                         <select name="pais" id="pais">
                             <option value="Elegir" id="AF">Elegir opción</option>
                             <option value="Afganistán" id="AF">Afganistán</option>
