Terminado el formulario (falta arreglar algun cosilla)

--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -331,9 +331,15 @@
                     </div>
                     <div class="checkBox">
                         <input class="boletin" name="boletin" type="checkbox" id="boletin">
-                        <label for="boletin">Suscribirme al boletín de ofertas y novedades promocionales de NBA Minds</label>
+                        <label class="textoBoletin" for="boletin">Suscribirme al boletín de ofertas y novedades promocionales de NBA Minds.</label>
+                    </div>
+                    <div class="checkBox2">
                         <input class="terceros" name="terceros" type="checkbox" id="terceros">
-                        <label for="terceros"></label>
+                        <label class="textoTerceros" for="terceros">Acepto enviar mis datos a terceros.</label>
+                    </div>
+                    <div class="botones2">
+                        <input class="envio" type="submit" name="envio" value="ENCESTA (Enviar)"/>
+                        <input class="limpieza" type="reset" name="limpiar" value="TAPONA (Limpiar)">
                     </div>
                 </form>
             </div>
