Comenzando a desarrollar la pestaña de Kobe y Gigi

--- a/html/masInfo.html
+++ b/html/masInfo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale:1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="../css/masInfo/headerNav.css">
-    <link rel="stylesheet" href="../css/masInfo/main.css">
+    <link rel="stylesheet" href="../css/masInfo/mainInfo.css">
     <link rel="stylesheet" href="../css/masInfo/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/298a659b97.js" crossorigin="anonymous"></script>
@@ -23,13 +23,10 @@
             <div class="botones">
                 <ul>
                     <li>
-                        <a href="html/estrellas.html">Estrellas NBA</a>
-                    </li>
-                    <li>
                         <a href="html/hazañas.html">Hazañas</a>
                     </li>
                     <li>
-                        <a href="html/Kobe.html">Kobe & Gigi</a>
+                        <a href="kobe.html">Kobe & Gigi</a>
                     </li>
                     <li>
                         <a href="masInfo.html">+ INFO</a>
@@ -51,19 +48,19 @@
                     <h3>DATOS PERSONALES</h3>
                     <div class="dato1">
                         <label for="nombre">Nombre:</label>
-                        <input type="text" id="nombre" name="nombre" placeholder="Introduzca su nombre">
+                        <input type="text" id="nombre" name="nombre" placeholder="Introduzca su nombre" style="font-family: 'Rubik';">
                     </div>
                     <div class="dato2">
                         <label for="apellidos">Apellidos:</label>
-                        <input type="text" id="apellidos" name="apellidos" placeholder="Introduzca sus apellidos">
+                        <input type="text" id="apellidos" name="apellidos" placeholder="Introduzca sus apellidos" style="font-family: 'Rubik';">
                     </div>
                     <div class="dato3">
                         <label for="email">Email:</label>
-                        <input type="text" id="email" name="email" placeholder="Introduzca un e-mail">
+                        <input type="text" id="email" name="email" placeholder="Introduzca un e-mail" style="font-family: 'Rubik';">
                     </div>
                     <div class="dato4">
                         <label class="paisResi" for="pais">País de residencia:</label>
-                        <select name="pais" id="pais">
+                        <select name="pais" id="pais" style="font-family: 'Rubik';">
                             <option value="Elegir" id="AF">Elegir opción</option>
                             <option value="Afganistán" id="AF">Afganistán</option>
                             <option value="Albania" id="AL">Albania</option>
@@ -306,8 +303,8 @@
                         </div>
                         <div class="dato5">
                             <label class="fecha" for="nacimiento">Fecha de Nacimiento:</label>
-                            <input type="text" id="email" name="email" placeholder="Día">
-                            <select name="mes" id="mes">
+                            <input type="text" id="email" name="email" placeholder="Día" style="font-family: 'Rubik';">
+                            <select name="mes" id="mes" style="font-family: 'Rubik';">
                                 <option>Mes</option>
                                 <option value="January">Enero</option>
                                 <option value="Febuary">Febrero</option>
@@ -322,12 +319,12 @@
                                 <option value="November">Noviembre</option>
                                 <option value="December">Diciembre</option>
                             </select>
-                            <input type="text" id="anio" name="anio" placeholder="Año">
+                            <input type="text" id="anio" name="anio" placeholder="Año" style="font-family: 'Rubik';">
                         </div>
                     <h3>CUÉNTANOS</h3>
                     <div class="mensaje">
                         <label for="momento">Una anécdota:</label>
-                        <textarea name="descripcion" id="descripcion" rows="7" placeholder="Dinos cual ha sido tu momento NBA favorito..."></textarea>
+                        <textarea name="descripcion" id="descripcion" rows="7" placeholder="Dinos cual ha sido tu momento NBA favorito..." style="font-family: 'Rubik';"></textarea>
                     </div>
                     <div class="checkBox">
                         <input class="boletin" name="boletin" type="checkbox" id="boletin">
@@ -338,8 +335,8 @@
                         <label class="textoTerceros" for="terceros">Acepto enviar mis datos a terceros.</label>
                     </div>
                     <div class="botones2">
-                        <input class="envio" type="submit" name="envio" value="ENCESTA (Enviar)"/>
-                        <input class="limpieza" type="reset" name="limpiar" value="TAPONA (Limpiar)">
+                        <input class="envio" type="submit" name="envio" value="ENCESTA (Enviar)" style="font-family: 'Rubik';"/>
+                        <input class="limpieza" type="reset" name="limpiar" value="TAPONA (Limpiar)" style="font-family: 'Rubik';"/>
                     </div>
                 </form>
             </div>
