--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
             <div class="botones">
                 <ul>
                     <li>
-                        <a href="html/estrellas.html">Estrellas NBA</a>
-                    </li>
-                    <li>
                         <a href="html/hazañas.html">Hazañas</a>
                     </li>
                     <li>
-                        <a href="html/Kobe.html">Kobe & Gigi</a>
+                        <a href="html/kobe.html">Kobe & Gigi</a>
                     </li>
                     <li>
                         <a href="html/masInfo.html">+ INFO</a>
