--- a/html/kobe.html
+++ b/html/kobe.html
@@ -36,12 +36,9 @@
         </nav>
     </header>
     <main>
-        <video src="../videos/tributoKobe.mp4" autoplay muted loop></video>
-        <div class="kobe">
-            <div class="infoKobe"></div>
-            <div class="videoKobe"></div>
+        <div fondoKobe>
+            <video src="../videos/tributoKobe.mp4" autoplay muted loop></video>
         </div>
-        <div class="gigi"></div>
     </main>
     <footer>
         <div class="finalInfo">
