Introducción de vídeos definitivos

--- a/html/kobe.html
+++ b/html/kobe.html
@@ -36,8 +36,21 @@
         </nav>
     </header>
     <main>
-        <div fondoKobe>
-            <video src="../videos/tributoKobe.mp4" autoplay muted loop></video>
+        <div class="kobe">
+            <div class="fondoKobe">
+                <video src="../videos/tributoKobe3.mp4" autoplay muted loop><p>KOBE BRYANT</p></video>
+            </div>
+            <div class="fotosKobe">
+                <div class="fotoN24">
+                    <img src="../img/kobe/kobePerfil24.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="kobeAndGigi"></div>
+        <div class="gigi">
+            <div class="fondoGigi">
+                <video src="../videos/tributoGigi3.mp4" autoplay muted loop></video>
+            </div>
         </div>
     </main>
     <footer>
