--- a/html/kobe.html
+++ b/html/kobe.html
@@ -40,10 +40,15 @@
             <div class="fondoKobe">
                 <video src="../videos/tributoKobe3.mp4" autoplay muted loop><p>KOBE BRYANT</p></video>
             </div>
-            <div class="fotosKobe">
-                <div class="fotoN24">
-                    <img src="../img/kobe/kobePerfil24.png" alt="">
-                </div>
+            <div class="sliderKobe">
+                <ul>
+                    <li>
+                        <img src="../img/sliderKobe/kobe8jump.jpg" alt="">    
+                    </li>
+                    <li>
+                        <img src="../img/sliderKobe/kobe24.jpg" alt="">
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="kobeAndGigi"></div>
