Fixeando el slider

--- a/html/kobe.html
+++ b/html/kobe.html
@@ -43,7 +43,8 @@
             <div class="sliderKobe">
                 <ul>
                     <li>
-                        <img src="../img/sliderKobe/kobe8jump.jpg" alt="">    
+                        <img src="../img/sliderKobe/kobe8jump.jpg" alt="">
+                        <p>Kobe</p>    
                     </li>
                     <li>
                         <img src="../img/sliderKobe/kobe24.jpg" alt="">
