Intento de botón fallido, mañana probaré a ver si consigo hacerlo

--- a/html/kobe.html
+++ b/html/kobe.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/kobeGigi/footer.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/298a659b97.js" crossorigin="anonymous"></script>
+    <script src="../js/kobe/buttonKobe.js" type="text/javascript"></script>
     <title>NBA MINDS</title>
 </head>
 
@@ -51,10 +52,25 @@
                 </ul>
             </div>
         </div>
-        <div class="kobeAndGigi"></div>
+        <article>
+            <div class="kobeAndGigi">
+                <input type="checkbox">
+                <span class="slider"></span>
+            </div>
+        </article>
         <div class="gigi">
             <div class="fondoGigi">
                 <video src="../videos/tributoGigi3.mp4" autoplay muted loop></video>
+            </div>
+            <div class="sliderGigi">
+                <ul>
+                    <li>
+                        <img src="../img/gigi/gigi1.jpg" alt="">    
+                    </li>
+                    <li>
+                        <img src="../img/gigi/gigi2.jpg" alt="">
+                    </li>
+                </ul>
             </div>
         </div>
     </main>
