Introducción de datos Gigi

--- a/html/kobe.html
+++ b/html/kobe.html
@@ -54,8 +54,29 @@
         </div>
         <article>
             <div class="kobeAndGigi">
-                <input type="checkbox">
-                <span class="slider"></span>
+                <div class="gigiBox">
+                    <h2>GIANNA BRYANT</h2>
+                    <p>Gianna Bryant o también conocida
+                        como Gigi era la segunda de las
+                        cuatro hijas del ex-jugador Kobe
+                        Bryant, la cual a sus tan sólo 13
+                        años de edad ya era una gran
+                        aficionada al deporte,
+                        especialmente el baloncesto. 
+                        Jugaba actualmente con el dorsal 
+                        número 2 en el equipo creado por
+                        su propio padre llamado MAMBA. El sueño 
+                        de esta pequeña era llegar a jugar la 
+                        liga femenina de Uconn Huskies y en un 
+                        futuro quien sabe tal vez a la WNBA dado el 
+                        gran talento que tenía y que su padre 
+                        reconocía a diario.
+                    </p>
+                </div>
+                <div class="and">
+                    <p>&</p>
+                </div>
+                <div class="kobeBox"></div>
             </div>
         </article>
         <div class="gigi">
